remove some gc config